--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -283,6 +283,137 @@ ggplot(Index, aes(x = Year)) +
 
 The graph illustrates the index of injury `(Number of accidents/Number of workers)` in yearly bases, the number of workers is obtained from [Bancadati](https://bancadaticsa.inail.it/bancadaticsa/bancastatistica.asp?cod=0), from the graph we can see that the index of injuries have a downward trend over the years, with 3.89% at the year 2017 and 3.27%. The year 2021 shows the percentage of the injuries has declined by 0.62% from the year 2020. 
 
+## Index of Injuries by economic sector
+
+
+```{r}
+library(readxl)
+eco_set_index <- read_excel("data_index.xlsx", sheet = 1)
+colnames(eco_set_index) <- c("economic_sector", "Index2017", "Index2018",
+                          "Index2019", "Index2020", "Index2021")
+head(eco_set_index)
+```
+## Index of Injuries by Tariff Inail
+
+```{r}
+Tari_inail <- read_excel("data_index.xlsx", sheet = 2)
+colnames(Tari_inail) <- c("Tariff_Inail", "Index2017", "Index2018",
+                          "Index2019", "Index2020", "Index2021")
+head(Tari_inail)
+  
+```
+## Index of Injuries by management tariff
+
+```{r}
+gestione <- read_excel("data_index.xlsx", sheet = 3)
+colnames(gestione) <- c("gestione_tarif", "Index2017", "Index2018",
+                          "Index2019", "Index2020", "Index2021")
+head(gestione)
+```
+## Index of Injuries by Ripartizione geografica
+
+```{r}
+Rep_geo <- read_excel("data_index.xlsx", sheet = 4)
+colnames(Rep_geo) <- c("Rep_geo", "Index2017", "Index2018",
+                          "Index2019", "Index2020", "Index2021")
+head(Rep_geo)
+```
+## Index of Injuries by company diamension
+
+```{r}
+Dim_azend <- read_excel("data_index.xlsx", sheet = 5)
+colnames(Dim_azend) <- c("Dim_azend", "Index2017", "Index2018",
+                          "Index2019", "Index2020", "Index2021")
+head(Dim_azend)
+```
+
+```{r}
+ggplot(Dim_azend, 
+       aes(x=Index2021, 
+           y=reorder(Dim_azend, Index2021))) +
+  geom_point(color="blue", 
+             size = 2) +
+  geom_segment(aes(x = 0.5, 
+               xend = Index2021, 
+               y = reorder(Dim_azend, Index2021), 
+               yend = reorder(Dim_azend, Index2021)),
+               color = "lightgrey") +
+  labs (x = "Injuries by company diamension",
+        y = "",
+        title = "ndex of iInjuries by company diamension",
+        subtitle = "Data  from - 2021") +
+  theme_minimal() + 
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank())
+```
+
+```{r}
+ggplot(Dim_azend, 
+       aes(x=Index2017, 
+           y=reorder(Dim_azend, Index2017))) +
+  geom_point(color="blue", 
+             size = 2) +
+  geom_segment(aes(x = 0.5, 
+               xend = Index2017, 
+               y = reorder(Dim_azend, Index2017), 
+               yend = reorder(Dim_azend, Index2017)),
+               color = "lightgrey") +
+  labs (x = "Injuries by company diamension",
+        y = "",
+        title = "Index of injuries by company diamension",
+        subtitle = "Data  from - 2017") +
+  theme_minimal() + 
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank())
+```
+## Index of Injuries by regions
+
+```{r}
+region <- read_excel("data_index.xlsx", sheet = 6)
+colnames(region) <- c("region", "Index2017", "Index2018",
+                          "Index2019", "Index2020", "Index2021")
+head(region)
+```
+```{r}
+ggplot(region, 
+       aes(x=Index2017, 
+           y=reorder(region, Index2017))) +
+  geom_point(color="blue", 
+             size = 2) +
+  geom_segment(aes(x = 40, 
+               xend = Index2017, 
+               y = reorder(region, Index2017), 
+               yend = reorder(region, Index2017)),
+               color = "lightgrey") +
+  labs (x = "Injuries by Region",
+        y = "",
+        title = "Index of injuries by Region",
+        subtitle = "Data  from - 2017") +
+  theme_minimal() + 
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank())
+```
+
+```{r}
+ggplot(region, 
+       aes(x=Index2021, 
+           y=reorder(region, Index2021))) +
+  geom_point(color="blue", 
+             size = 2) +
+  geom_segment(aes(x = 40, 
+               xend = Index2021, 
+               y = reorder(region, Index2021), 
+               yend = reorder(region, Index2021)),
+               color = "lightgrey") +
+  labs (x = "Injuries by Region",
+        y = "",
+        title = "Index of injuries by Region",
+        subtitle = "Data  from - 2021") +
+  theme_minimal() + 
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank())
+```
+
 
 
 ## The porportion between male and female injuries
